--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           imageUrl: 'https://avatars.githubusercontent.com/u/56524782?v=4', // Github 头像地址
           linkUrl: 'https://github.com/Ting-Code' // Github 地址
         },
+        {
+          imageUrl: 'https://avatars.githubusercontent.com/u/126653087?v=4', // Github 头像地址
+          linkUrl: 'https://github.com/TINGCYG' // Github 地址
+        },
         // 添加更多Github头像和链接
       ];
 
