--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
           imageUrl: 'https://avatars.githubusercontent.com/u/126653087?v=4', // Github 头像地址
           linkUrl: 'https://github.com/TINGCYG' // Github 地址
         },
+        {
+          imageUrl: 'https://avatars.githubusercontent.com/u/105594800?v=4', // Github 头像地址
+          linkUrl: 'https://github.com/wyzzhe' // Github 地址
+        },        
         // 添加更多Github头像和链接
       ];
 
