--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>游客打卡点</title>
+    <title>贡献人员</title>
     <style>
         .main {
             width: 100%;
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div class="main">
-      <h1 class="title">游客打卡点</h1>
+      <h1 class="title">贡献人员</h1>
       <div id="tag">
         <!-- 这里将来会插入头像图片 -->
       </div>
