--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         {
           imageUrl: 'https://avatars.githubusercontent.com/u/105594800?v=4', // Github 头像地址
           linkUrl: 'https://github.com/wyzzhe' // Github 地址
-        },        
+        },       
+        {
+          imageUrl: 'https://avatars.githubusercontent.com/u/145048179?v=4', // Github 头像地址
+          linkUrl: 'https://github.com/yw540'  // Github 地址
+        } 
         // 添加更多Github头像和链接
       ];
 
