--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       {
         imageUrl: 'https://avatars.githubusercontent.com/u/145048179?v=4', // Github 头像地址
         linkUrl: 'https://github.com/yw540'  // Github 地址
-      } 
+      },
+      {
+        imageUrl: 'https://avatars.githubusercontent.com/u/62541265?v=4', // Github 头像地址
+        linkUrl: 'https://github.com/MiyanoX'  // Github 地址
+      },
         // 添加更多Github头像和链接
       ];
       // 创建图片和超链接
