--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         imageUrl: 'https://avatars.githubusercontent.com/u/62541265?v=4', // Github 头像地址
         linkUrl: 'https://github.com/MiyanoX'  // Github 地址
       },
+      {
+        imageUrl: 'https://avatars.githubusercontent.com/u/44825767?v=4', // Github 头像地址
+        linkUrl: 'https://github.com/WenpingWei'  // Github 地址
+      },
         // 添加更多Github头像和链接
       ];
       // 创建图片和超链接
