--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         imageUrl: 'https://avatars.githubusercontent.com/u/44825767?v=4', // Github 头像地址
         linkUrl: 'https://github.com/WenpingWei'  // Github 地址
       },
+      {
+        imageUrl: 'https://avatars.githubusercontent.com/u/90215880?v=4',
+        linkUrl: 'https://github.com/Sma1lboy'  // Github 地址
+      },
         // 添加更多Github头像和链接
       ];
       // 创建图片和超链接
