--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         imageUrl: 'https://avatars.githubusercontent.com/u/90215880?v=4',
         linkUrl: 'https://github.com/Sma1lboy'  // Github 地址
       },
+      {
+        imageUrl: 'https://avatars.githubusercontent.com/u/84074281?v=4',
+        linkUrl: 'https://github.com/dawn-zhui'  // Github 地址
+      },
         // 添加更多Github头像和链接
       ];
       // 创建图片和超链接
