--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         imageUrl: 'https://avatars.githubusercontent.com/u/84074281?v=4',
         linkUrl: 'https://github.com/dawn-zhui'  // Github 地址
       },
+      {
+        imageUrl: 'https://avatars.githubusercontent.com/u/36628162?v=4',
+        linkUrl: 'https://github.com/cheeseburgertony'  // Github 地址
+      },
         // 添加更多Github头像和链接
       ];
       // 创建图片和超链接
